# GPU_Hash

./: .~lock.s.csv#  CMakeLists.txt  README.md
core/: basistest_hashtabelle.cpp  cuckoo_hashtabelle.cpp  dynamisch_hashtabelle.cpp  hash_method.cuh  hash_methods.cuh  hash_table.cuh  hashtabelle.cpp  hashtabelle.cuh  hashtabelle_device.cuh  hashtabelle_kernels.cuh  hashverfahren.cuh  statisch_hashtabelle.cpp
data/: datenvorlage.h
examples/: CMakeLists.txt  example_hash.cu  example_hash.cuh  example_hash_table.cuh  hash_table_delete0.cu  hash_table_delete1.cu  hash_table_insert0.cu  hash_table_insert0A.cu  hash_table_insert0B.cu  hash_table_insert1.cu  hash_table_insert2.cu  hash_table_insert3.cu  hash_table_insert4.cu  hash_table_insert5.cu  hash_table_insert6.cu  hash_table_search0.cu  hash_table_search1.cu
hashfunktionen/: dycuckoo_funktionen.cuh  dycuckoo_funktionen.h  hashfunktionen.cuh  hashfunktionen.h
include/: base.h  basistest_hashtabelle.h  cuckoo_hashtabelle.h  declaration.cuh  deklaration.cuh  dynamisch_hashtabelle.h  hash_function.cuh  hash_table.h  hashfunktionen.cuh  hashfunktionen.h  hashtabelle.h  hashtabelle_device.cuh  statisch_hashtabelle.h  test_main.h  test_parallel.cuh  test_sequentiell.h
src/: cuckoo_hashtabelle.cuh  dynamisch_hashtabelle.cuh  hashtabelle.cuh  hashtabelle_kernels_insert.cuh  hashtabelle_kernels_suchen.cuh  statisch_hashtabelle.cuh  test_main.h
test/: CMakeLists.txt  hash_table_delete1.cu  hash_table_insert1.cu  hash_table_insert2.cu  hash_table_search1.cu  test_hash.cu  test_hash.cuh  test_hash_table.cuh
test/hashfunktionen/: CMakeLists.txt  hashfunktion1.cu  hashfunktion2.cu  hashfunktion3.cu
test/hashtabelle/: Basistest.cpp  CMakeLists.txt
test/insert/: CMakeLists.txt  hashtabelleCuckoo_gross.cu  hashtabelleCuckoo_klein.cpp  hashtabelleCuckoo_klein.cu  hashtabelle_gross.cpp  hashtabelle_gross.cu  hashtabelle_insert.cu  hashtabelle_klein.cpp  hashtabelle_klein.cu  test_insert.cuh
test/insert/dynamisch/: CMakeLists.txt  hashtabelle_klein.cu
test/insert/statisch/: CMakeLists.txt  hashtabelle_gross.cu  hashtabelle_klein.cu
test/suchen/: CMakeLists.txt  hashtabelleSuchenCuckoo_gross.cu  hashtabelleSuchenCuckoo_klein.cu  hashtabelleSuchen_gross.cu  hashtabelleSuchen_klein.cu  hashtabelle_gross.cpp  hashtabelle_gross.cu  hashtabelle_klein.cpp  hashtabelle_klein.cu
tests/: CMakeLists.txt  test_hash_function.cu  test_hash_table.cu
tools/: CMakeLists.txt  benchmark.h  cells_program.cpp  timer.cuh  timer.h
