set(TS_I1   ../../include/hashtabelle.h   ../../data/datenvorlage.h   ../../core/hashtabelle.cpp
../../include/hashtabelle_device.cuh   ../../include/deklaration.cuh   ../../core/hashtabelle.cuh   
../../core/hashverfahren.cuh   ../../tools/timer.h   ../../test/insert/test_insert.cuh   
../../test/insert/hashtabelle_insert.cu)

add_executable(testInsert1 ${TS_I1})